--- a/Authentication-Minimal-API/Authentication-Minimal-API.csproj
+++ b/Authentication-Minimal-API/Authentication-Minimal-API.csproj
@@ -2,24 +2,24 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>Authentication_Minimal_API</RootNamespace>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Dapper" Version="2.0.123"/>
-        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.17.0"/>
-        <PackageReference Include="Npgsql" Version="6.0.3"/>
-        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.3.0"/>
-        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.3.0"/>
-        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.3.0"/>
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0"/>
+        <PackageReference Include="Dapper" Version="2.0.123" />
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.17.0" />
+        <PackageReference Include="Npgsql" Version="6.0.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.3.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.3.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.3.0" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="SQL"/>
+        <Folder Include="SQL" />
     </ItemGroup>
 
 </Project>
